# UNIT-1-WORKSPACE

./: .gitignore
Headless-Capture/: CMakeLists.txt  Capture_Config_02_Invective_Amp.json
Headless-Capture/Source/: CaptureController.cpp  CaptureController.h  Main.cpp  MainComponent.cpp  MainComponent.h  PluginHostManager.cpp  PluginHostManager.h
Modeller/: CMakeLists.txt  UI CODE FROM EXPORT v2.cpp
Modeller/Make knobs movable/: index.html
Modeller/Make knobs movable/src/app/components/: InteractiveModeller.tsx  RotatableKnob.tsx
Modeller/Make knobs movable/src/imports/: Frame1.tsx  svg-jlepp2ol9g.ts
Modeller/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Modeller/Source/DSP/: BaseDSPBlock.h  CabSimulator.h  HorizonDrive.h  PVVitriol.h
Modeller/Source/UI/: CustomLookAndFeel.h
Modeller/Source/Utils/: ModelLoader.h
Modeller/Source/WebUI/src/app/: App.tsx
Modeller/Source/WebUI/src/app/components/: HorizontalSlider.tsx  PedalButton.tsx
Trainer-V2/: conversation with gemini.md  native_app.py  start_trainer.sh
Trainer-V2/trainer_app/: app.py  requirements.txt
Trainer-V2/trainer_app/backend/: ingest.py  project_manager.py  trainer_engine.py
Trainer-V2/trainer_app/backend/dsp/: base_dsp.py  horizon_drive.py  pv_vitriol.py
Trainer-V2/trainer_app/templates/: index.html
U1-Ion/: CMakeLists.txt  v003_01_Horizon_Pedal_Epochs1000_Chunk60s_Loss0p006719.json  v005_02_Invective_Amp_Epochs300_Chunk2s_Loss0p002201.json
U1-Ion/Source/: IonEditor.cpp  IonEditor.h  IonProcessor.cpp  IonProcessor.h
U1-Ion/Source/DSP/: HorizonDrive.h  PVVitriol.h
U1-Ion/Source/Utils/: ModelLoader.h
U1-Ion/Source/WebUI/: README.md
